update new endpoints to v2
