# maas-api/internal/db/models.go
@@ -1,0 +1,25 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package db
+
+import (
+	"time"
+
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type ApiKey struct {
+	ID          string             `json:"id"`
+	Username    string             `json:"username"`
+	Name        string             `json:"name"`
+	Description *string            `json:"description"`
+	KeyHash     string             `json:"key_hash"`
+	KeyPrefix   string             `json:"key_prefix"`
+	Status      string             `json:"status"`
+	UserGroups  string             `json:"user_groups"`
+	CreatedAt   time.Time          `json:"created_at"`
+	ExpiresAt   pgtype.Timestamptz `json:"expires_at"`
+	LastUsedAt  pgtype.Timestamptz `json:"last_used_at"`
+}
